--- a/BDMatch.vcxproj
+++ b/BDMatch.vcxproj
@@ -143,6 +143,10 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Numerics.Vectors">
+      <HintPath>..\packages\System.Numerics.Vectors.4.4.0\ref\net46\System.Numerics.Vectors.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -176,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\logo1.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
