--- a/BDMatch.vcxproj.filters
+++ b/BDMatch.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
