--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 FFTNum:512
 MaxCheckNum:60
-FindField:3
+FindField:10
 MinFinddB:-12
 MaxLength:20
+AssOffset:0
 OutputPCM:0
 Draw:0
 MatchAss:1
 ParallelDecode:0
-FastMatch:0
 
 
