--- a/BDMatchCore/BDMatchCore.vcxproj
+++ b/BDMatchCore/BDMatchCore.vcxproj
@@ -23,33 +23,33 @@
     <ProjectGuid>{050EB5B9-7CAE-43F0-9285-831210B2EC0A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Matching</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>BDMatchCore</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -168,6 +168,7 @@
     <ClInclude Include="datastruct.h" />
     <ClInclude Include="decoder.h" />
     <ClInclude Include="instructionset.h" />
+    <ClInclude Include="language_pack.h" />
     <ClInclude Include="matching.h" />
     <ClInclude Include="multithreading.h" />
     <ClInclude Include="resource.h" />
@@ -178,6 +179,7 @@
     <ClCompile Include="datastruct.cpp" />
     <ClCompile Include="decoder.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="language_pack.cpp" />
     <ClCompile Include="matching.cpp" />
   </ItemGroup>
   <ItemGroup>
