--- a/BDMatchCore/BDMatchCore.vcxproj.filters
+++ b/BDMatchCore/BDMatchCore.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="language_pack.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="matching.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="dllmain.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="language_pack.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
