--- a/BDMatch/BDMatch.vcxproj.filters
+++ b/BDMatch/BDMatch.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyForm.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Settings.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -27,31 +24,9 @@
     <ClCompile Include="datastruct1.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MyForm.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Settings.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="user interface.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="datastruct1.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MyForm.resx">
-      <Filter>资源文件</Filter>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Settings.resx">
-      <Filter>资源文件</Filter>
-    </EmbeddedResource>
+    <ClCompile Include="MyForm.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BDMatch.rc">
@@ -62,5 +37,30 @@
     <Image Include="..\..\logo1.ico">
       <Filter>资源文件</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="MyForm.resx">
+      <Filter>资源文件</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings.resx">
+      <Filter>资源文件</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headers\datastruct1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\user interface.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MyForm.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
