--- a/BDMatchUI/BDMatchUI.csproj
+++ b/BDMatchUI/BDMatchUI.csproj
@@ -14,12 +14,13 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <AssemblyName>BDMatch</AssemblyName>
-    <Version>2.0.0</Version>
-    <FileVersion>2.0.0</FileVersion>
+    <Version>2.0.1</Version>
+    <FileVersion>2.0.1</FileVersion>
     <Authors>Thomasys</Authors>
     <Copyright>By Thomasys</Copyright>
     <ApplicationIcon>logo.ico</ApplicationIcon>
     <IsPublishable>True</IsPublishable>
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="AboutPage.xaml" />
@@ -44,8 +45,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231219000" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240404000" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
