--- a/BDMatchUI/BDMatchUI.csproj
+++ b/BDMatchUI/BDMatchUI.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>BDMatchUI</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -14,8 +14,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <AssemblyName>BDMatch</AssemblyName>
-    <Version>2.0.4</Version>
-    <FileVersion>2.0.4</FileVersion>
+    <Version>2.0.5</Version>
+    <FileVersion>2.0.5</FileVersion>
     <Authors>Thomasys</Authors>
     <Copyright>By Thomasys</Copyright>
     <ApplicationIcon>logo.ico</ApplicationIcon>
@@ -46,8 +46,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240607001" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3065.39" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.250205002" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
@@ -104,6 +105,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <PropertyGroup Label="Globals">
+    <WebView2EnableCsWinRTProjection>True</WebView2EnableCsWinRTProjection>
+  </PropertyGroup>
 
   <!-- 
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution 
